feat: implement RFQ email acknowledgement service, File limit handling and add comprehensive processing flow test suite